force-app/main/default/objects/Discount_Applied__c/Discount_Applied__c.object-meta.xml
<CustomObject>
    <label>Discount Applied</label>
    <nameField>
        <displayFormat>DA-{0000}</displayFormat>
        <label>Discount Applied Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Applied</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>