force-app/main/default/objects/Discount_Applied__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Discount Applieds</relationshipLabel>
    <relationshipName>Discount_Applieds</relationshipName>
    <type>Lookup</type>
</CustomField>