force-app/main/default/objects/Discount_Applied__c/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <type>TextArea</type>
</CustomField>